# HexAgrar

./: .gitignore  HexAgrar.html  README.md  index.html  style.css  tsconfig.json
built/: brett.js  hist.js  main.js  panels.js  player.js  stellung.js
campus/: package-lock.json  package.json  tsconfig.json  webpack.config.js
campus/public/: 304.304.js  brett.css  global.css  index.html  preload.togredb  wasm_pkg_wasm_js.wasm_pkg_wasm_js.js  wasm_pkg_wasm_js.wasm_pkg_wasm_js.js.map
campus/public/styles/brett/: general.css  modernTheme.css
campus/src/: auto.ts  core.ts  halbkreis.ts  main.ts  preload_db.ts  stores.ts  togre.ts  tools.ts
campus/src/comp/: App.svelte  Automatenauswahl.svelte  Baum.svelte  Baumstamm.svelte  DevOutTable.svelte  Inspektor.svelte  Statistik.svelte  Status.svelte  Stellung.svelte  Togre.svelte
campus/src/comp/Overlays/: FinalOverlay.svelte  OverlayBase.svelte  OverlayManager.svelte  Stellung_Overlay.svelte
campus/src/comp/brett/: Brett.svelte  Brett.svelte.BAK  BrettBase.svelte
rusty-hexagrar/: 5.11. Performance+Memory Test.txt  Cargo.toml  help.txt  out.tdb  run  step_stats
rusty-hexagrar/.cargo/: config
rusty-hexagrar/src/: hexagrar.rs  hexagrarBAK.rs  hexagrar_2.rs  hexagrar_3.rs  hexagrar_3_BAK.rs  hexagrar_4.rs  main.rs
src/: brett.ts  hist.ts  main.ts  panels.ts  player.ts  stellung.ts
styles/: brett.css  index.css  panels.css
wasm/: .gitignore  Cargo.toml
wasm/pkg/: package.json  wasm.d.ts  wasm_bg.js  wasm_bg.wasm  wasm_bg.wasm.d.ts
wasm/src/: hexagrar.rs  lib.rs
